--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700"
+        rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="main-frame">
+      <div class="contentwrapper">
+        <img class="phones" src="./images/phones.png"/>
+        <div class="content">
+          <div class="content-top">
+            <img class="intagram-logo" src="./images/brand.png"/>
+            <div class="login">
+                <img class="login-logo" src="./images/home.png"/>
+                <p>Log in</p>
+            </div>
+          </div>
+          <div class="content-bottom">
+            <h1>capture and share the world's moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img class="playstore" src="./images/badge-android.png"/>
+            <img class="appstore" src="./images/badge-iphone.png"/>
+          </div>
+        </div>
+      </div>
+      <div class="nav">
+         <a class="nav-item" href="#">about us</a>
+         <a class="nav-item" href="#">support</a>
+         <a class="nav-item" href="#">blog </a>
+         <a class="nav-item" href="#">press </a>
+         <a class="nav-item" href="#">api </a>
+         <a class="nav-item" href="#">jobs </a>
+         <a class="nav-item" href="#">privacy </a>
+         <a class="nav-item" href="#">terms </a>
+      </div>
+    </div>
+  </body>
 </html>
